well then, just fixed my ugly ass css hackjob using http://www.mattboldt.com/css-100-percent-height/ as a tutorial/explan, remarkable simple when you think about it, feels good to not have the map size hardcoded like a scrublord. stretch works, i should probably stop procrastinating on the bloody navbar now...

--- a/public/stylesheets/home_style.css
+++ b/public/stylesheets/home_style.css
@@ -1,6 +1,11 @@
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 #map {
-  height: 736px;
-  width: 414px;
+  height: 100%;
+  width: 100%;
   padding: 0px !important;
   margin: 0px !important;
   border: 0px !important;
